Beginning to address sizing issues, and fixed banner spacing issues. Added subtitle.

--- a/petris/static/css/styles.css
+++ b/petris/static/css/styles.css
@@ -2,40 +2,56 @@ html,
 body,
 #Main,
 #Wrapper {
-  min-height: 100%;
-  min-width: 100%;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  display: block;
+}
+#Wrapper {
   display: flex;
   flex-direction: column;
 }
 #Banner {
+  flex-shrink: 0;
+  flex-grow: 0;
   padding: 3px 0;
   color: #042A47;
-  display: block;
+  display: flex;
+  justify-content: left;
   font-size: 4em;
   min-width: 100%;
-  /* height: 10%; */
   background-color: #FFFD;
   text-align: center;
   border-bottom: dashed;
   border-bottom-color: #042A47;
   margin-bottom: 20px;
-}
-#BannerContents {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  height: 100%;
-  margin-bottom: 3px;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 #BannerScores {
   display: flex;
+  justify-content: left;
   flex-direction: row;
   height: 100%;
   width: 100%;
   position: relative;
+  margin-bottom: 3px;
+}
+#BannerScores .hexagon span {
+  font-weight: 900;
+}
+#Title {
+  font-size: 4rem;
+  height: '100%';
+  margin: 0 20px;
+  flex-shrink: 0;
+  font-size: '4rem';
+}
+#Subtitle {
+  font-size: 2rem;
+  margin: auto 0;
 }
 .playerScore, .playerScoreLower {
   position: absolute;
@@ -44,7 +60,9 @@ body,
   justify-content: left;
   top: 0px;
   left: 0px;
-  /* background-color: white; */
+}
+.playerScore span, .playerScoreLower span {
+  font-size: 2rem;
 }
 .playerScoreLower {
   top: 34px;
@@ -54,21 +72,17 @@ body,
   display: block;
   height: 100%;
   width: 100%;
+  min-width: 14rem;
   position: relative;
 }
-#BannerScores span {
-  font-size: 2rem;
-}
-#BannerScores .hexagon span {
-  font-weight: 900;
-}
 #Welcome,
-#Room {
-  height: 100%;
-  width: 100%;
+#Room,
+#GamePlayWrapper,
+#Help {
+  height: -webkit-fill-available;
+  width: -webkit-fill-available;
 }
 #Help {
-  width: 100%;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -83,14 +97,14 @@ body,
   align-items: center;
 }
 #GamePlayWrapper {
-  min-width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: start;
+  /* flex-direction: row; */
+  align-items: center;
+  justify-content: left;
+  position: relative;
 }
 .slider {
-  margin-left: auto;
-  margin-right: auto;
+  width: 16rem;
 }
 .slider span {
   margin-left:10px;
@@ -101,9 +115,9 @@ body,
 }
 #Board {
   position: relative;
-  margin: 0 auto;
   display: block;
-  overflow: auto;
+  flex-shrink: 0;
+  pointer-events: none;
 }
 .textItem {
   background-color: white;
